LionsTruck/force-app/main/default/objects/L_CalloutMappingCMDT__mdt/L_CalloutMappingCMDT__mdt.object-meta.xml
<CustomObject>
    <description>To store the mappings from json to salesforce api field names</description>
    <label>Callout Mapping</label>
    <pluralLabel>Callout Mappings</pluralLabel>
</CustomObject>