LionsTruck/force-app/main/default/objects/L_CalloutMappingCMDT__mdt/fields/L_FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>L_FieldAPIName__c</fullName>
    <description>SF Field API Name</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>