LionsTruck/force-app/main/default/objects/L_CalloutMappingCMDT__mdt/fields/L_JSONAttributeName__c.field-meta.xml
<CustomField>
    <fullName>L_JSONAttributeName__c</fullName>
    <description>json attribute name</description>
    <label>JSON Attribute Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>