LionsTruck/force-app/main/default/objects/L_CalloutMappingCMDT__mdt/fields/L_SObjectName__c.field-meta.xml
<CustomField>
    <fullName>L_SObjectName__c</fullName>
    <description>SObject API Name</description>
    <label>SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>